# ROI-tracker

./: .gitignore  README.md  pyproject.toml
scripts/: run_sam2_overlay.py  run_video_overlay.py
src/: geometry.py  homography.py  temporal.py  video_io.py
tests/: test_pipeline.py
