[project]
name = "video-homography-pipeline"
version = "0.1.0"
description = "Video overlay pipeline: homography-fitting adapted for frame-by-frame video processing"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
sam2 = [
    "torch>=2.0",
    "torchvision>=0.15",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
